# rinha-with-rust-2026

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.local  Makefile  README.md  build.rs  docker-compose.local.yml  docker-compose.yml  nginx.conf
scripts/: check-health.sh
scripts/results/: 2026-04-25T15-04-04_v0.1.2_200vus_60s.json  2026-04-25T15-09-35_v0.1.2_200vus_60s.json  2026-04-27T16-42-33_v0.5.0_200vus_60s.json  2026-04-28T13-17-57_v0.6.0_200vus_60s.json  2026-04-28T13-52-10_v0.7.0_200vus_60s.json  2026-04-29T14-12-52_v0.7.0_200vus_60s.json
src/: handler.rs  index.rs  main.rs  packed_ref.rs  simd.rs  types.rs  vectorizer.rs
