[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

[dependencies]
axum       = "0.7"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
flate2     = "1"
chrono     = { version = "0.4", default-features = false, features = ["std", "serde"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
